fix: исправление аутентификации и структуры ролей
- Замена enum Role на Entity для работы Spring Security
- Исправление JWT TokenProvider (non-null claims, Base64 секрет)
- Обновление User модели и UserServiceImpl для Entity Role
- Добавление RoleRepository и инициализация тестовых данных
- Исправление AuthServiceImpl - рабочая JWT аутентификация