@@ -1,9 +1,10 @@
 package com.example.demo.service;
 
 import com.example.demo.dto.UserDto;
-import com.example.demo.enums.Role;
 import com.example.demo.mapper.UserMapper;
+import com.example.demo.model.Role;
 import com.example.demo.model.User;
+import com.example.demo.repository.RoleRepository;
 import com.example.demo.repository.UserRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -11,20 +12,20 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 public class UserServiceImpl implements UserService {
     
     private final UserRepository userRepository;
+    private final RoleRepository roleRepository;
     private final PasswordEncoder passwordEncoder;
     
     @Override
     public List<UserDto> getAllUsers() {
         return userRepository.findAll().stream()
                 .map(UserMapper::userToUserDto)
-                .collect(Collectors.toList());
+                .toList();
     }
     
     @Override
@@ -42,10 +43,15 @@ public class UserServiceImpl implements UserService {
     
     @Override
     public UserDto createUser(UserDto userDto) {
+        // Находим роль по имени (убираем префикс "ROLE_")
+        String roleName = userDto.role().replace("ROLE_", "");
+        Role role = roleRepository.findByName(roleName)
+                .orElseThrow(() -> new RuntimeException("Role not found: " + roleName));
+        
         User user = new User();
         user.setUsername(userDto.username());
         user.setPassword(passwordEncoder.encode(userDto.password()));
-        user.setRole(Role.valueOf(userDto.role().replace("ROLE_", "")));
+        user.setRole(role);
         
         User savedUser = userRepository.save(user);
         return UserMapper.userToUserDto(savedUser);
@@ -56,11 +62,16 @@ public class UserServiceImpl implements UserService {
         User user = userRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("User not found"));
         
+        // Находим роль по имени (убираем префикс "ROLE_")
+        String roleName = userDto.role().replace("ROLE_", "");
+        Role role = roleRepository.findByName(roleName)
+                .orElseThrow(() -> new RuntimeException("Role not found: " + roleName));
+        
         user.setUsername(userDto.username());
         if (userDto.password() != null && !userDto.password().isEmpty()) {
             user.setPassword(passwordEncoder.encode(userDto.password()));
         }
-        user.setRole(Role.valueOf(userDto.role().replace("ROLE_", "")));
+        user.setRole(role);
         
         User updatedUser = userRepository.save(user);
         return UserMapper.userToUserDto(updatedUser);
